[ ! ] Added thank you page and error handling

--- a/app/assets/stylesheets/donation.css
+++ b/app/assets/stylesheets/donation.css
@@ -6,8 +6,6 @@
     position: relative;
     padding: 0px;
     width: 300px;
-    margin-left: auto;
-    margin-right: auto;
 }
 .usable-creditcard-form .wrapper {
     border: 1px solid #CCC;
@@ -101,6 +99,7 @@
     position: relative;
     margin-left: 5px;
     margin-right: 5px;
+    margin-bottom: 20px;
 }
 .usable-creditcard-form .footer img {
     padding: 0px;
