--- a/app/views/donation/index.html.erb
+++ b/app/views/donation/index.html.erb
@@ -3,53 +3,88 @@
 <%= stylesheet_link_tag 'donation' %>
 
 <div class="container">
-  <h1>Doações</h1>
-  <p>Por favor doe R$ 1,00 para ajudar as crianças da Instituição XPTOYZ na África</p>
+  <div class="row">
+    <div class="col-md-6 col-xs-12">
+      <h1>Doações</h1>
+      <p>Por favor doe R$ 1,00 para ajudar as crianças da Instituição XPTOYZ na África</p>
 
-  <% flash.each do |name, msg| -%>
-    <%= content_tag :div, msg, class: "alert alert-#{name}" %>
-  <% end -%>
+      <% flash.each do |name, msg| -%>
+        <%= content_tag :div, msg, class: "alert alert-#{name}" %>
+      <% end -%>
 
-  <div class="btn-group" data-toggle="buttons">
-    <a class="btn btn-default" href="#cc" aria-controls="cc" data-toggle="tab">Cartão de Crédito</a>
-    <a class="btn btn-default" href="#bs" aria-controls="bs" data-toggle="tab">Boleto Bancário</a>
-  </div>
-
-  <form id="payment-form" action=<%= donate_url %> method="POST">
-    <div class="tab-content">
-      <div class="tab-pane active" id="cc">
-        <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-        <%= hidden_field_tag :token -%>
-        <div class="usable-creditcard-form">
-          <div class="wrapper">
-            <div class="input-group nmb_a">
-              <div class="icon ccic-brand"></div>
-              <input autocomplete="off" class="credit_card_number" data-iugu="number" placeholder="Número do Cartão" type="text" value="" />
-            </div>
-            <div class="input-group nmb_b">
-              <div class="icon ccic-cvv"></div>
-              <input autocomplete="off" class="credit_card_cvv" data-iugu="verification_value" placeholder="CVV" type="text" value="" />
-            </div>
-            <div class="input-group nmb_c">
-              <div class="icon ccic-name"></div>
-              <input class="credit_card_name" data-iugu="full_name" placeholder="Titular do Cartão" type="text" value="" />
-            </div>
-            <div class="input-group nmb_d">
-              <div class="icon ccic-exp"></div>
-              <input autocomplete="off" class="credit_card_expiration" data-iugu="expiration" placeholder="MM/AA" type="text" value="" />
-            </div>
-          </div>
-          <div class="footer">
-            <img src="http://storage.pupui.com.br/9CA0F40E971643D1B7C8DE46BBC18396/assets/cc-icons.e8f4c6b4db3cc0869fa93ad535acbfe7.png" alt="Visa, Master, Diners. Amex" border="0" />
-            <a class="iugu-btn" href="http://iugu.com" tabindex="-1"><img src="http://storage.pupui.com.br/9CA0F40E971643D1B7C8DE46BBC18396/assets/payments-by-iugu.1df7caaf6958f1b5774579fa807b5e7f.png" alt="Pagamentos por Iugu" border="0" /></a>
-          </div>
+      <form id="payment-form" action=<%= donate_url %> method="POST">
+        <div class="form-group">
+          <label>E-mail</label>
+          <input type="email" class="form-control" name="email">
         </div>
-      </div>
-      <div class="tab-pane" id="bs">
-        <p>Você será redirecionado para o Boleto Bancário após clicar em Doar</p>
-      </div>
-      <div><button class="btn btn-block btn-success btn-lg" type="submit">Doar</button></div>
-    </div>
-  </form>
 
+        <div class="form-group">
+          <label>Valor</label>
+          <input type="number" class="form-control" name="amount">
+        </div>
+
+        <div class="form-group">
+          <label>Mensagem</label>
+          <input type="text" class="form-control" name="message">
+        </div>
+
+        <div class="btn-group" data-toggle="buttons">
+          <a class="btn btn-default" href="#cc" aria-controls="cc" data-toggle="tab">Cartão de Crédito</a>
+          <a class="btn btn-default" href="#bs" aria-controls="bs" data-toggle="tab">Boleto Bancário</a>
+        </div>
+
+        <div class="tab-content">
+          <div class="tab-pane active" id="cc">
+            <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+            <%= hidden_field_tag :token -%>
+            <div class="usable-creditcard-form">
+              <div class="wrapper">
+                <div class="input-group nmb_a">
+                  <div class="icon ccic-brand"></div>
+                  <input autocomplete="off" class="credit_card_number" data-iugu="number" placeholder="Número do Cartão" type="text" value="" />
+                </div>
+                <div class="input-group nmb_b">
+                  <div class="icon ccic-cvv"></div>
+                  <input autocomplete="off" class="credit_card_cvv" data-iugu="verification_value" placeholder="CVV" type="text" value="" />
+                </div>
+                <div class="input-group nmb_c">
+                  <div class="icon ccic-name"></div>
+                  <input class="credit_card_name" data-iugu="full_name" placeholder="Titular do Cartão" type="text" value="" />
+                </div>
+                <div class="input-group nmb_d">
+                  <div class="icon ccic-exp"></div>
+                  <input autocomplete="off" class="credit_card_expiration" data-iugu="expiration" placeholder="MM/AA" type="text" value="" />
+                </div>
+              </div>
+              <div class="footer">
+                <img src="http://storage.pupui.com.br/9CA0F40E971643D1B7C8DE46BBC18396/assets/cc-icons.e8f4c6b4db3cc0869fa93ad535acbfe7.png" alt="Visa, Master, Diners. Amex" border="0" />
+                <a class="iugu-btn" href="http://iugu.com" tabindex="-1"><img src="http://storage.pupui.com.br/9CA0F40E971643D1B7C8DE46BBC18396/assets/payments-by-iugu.1df7caaf6958f1b5774579fa807b5e7f.png" alt="Pagamentos por Iugu" border="0" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane" id="bs">
+            <p>Você será redirecionado para o Boleto Bancário após clicar em Doar</p>
+          </div>
+          <div><button class="btn btn-block btn-success btn-lg" type="submit">Doar</button></div>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-6 col-xs-12">
+      <h1>últimas Doações</h1>
+      <table class="table">
+        <thead>
+          <th>Data</th>
+          <th>Valor</th>
+        </thead>
+        <tbody>
+          <% @donations.each do |donation| %>
+            <tr>
+              <td><%= donation.donated_at %></td>
+              <td><%= donation.amount_cents / 100 %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
