[ ! ] Added Sorcery and basic registration

--- a/app/views/donation/index.html.erb
+++ b/app/views/donation/index.html.erb
@@ -79,7 +79,7 @@
         <tbody>
           <% @donations.each do |donation| %>
             <tr>
-              <td><%= donation.donated_at %></td>
+              <td><%= l donation.donated_at, format: :long %></td>
               <td><%= donation.amount_cents / 100 %></td>
             </tr>
           <% end %>
